@startuml LightEngine
title LightEngine — Architecture (patch → select → program → store → render → output)

skinparam classAttributeIconSize 0
skinparam packageStyle rectangle
skinparam linetype ortho
hide empty members

' =====================================================================
' GDTF — fixture definitions (immutable, shared)
' =====================================================================
package GDTF <<Frame>> {
    enum Attribute {
        DIMMER
        VDIMMER
        COLOR_R
        COLOR_G
        COLOR_B
        COLOR_W
    }
    class DMXChannel {
        + address
        + resolution
    }
    class LogicalChannel {
        + attribute : Attribute
        + channel : DMXChannel
        + functions : vector<ChannelFunction>
    }
    LogicalChannel *-- DMXChannel
    LogicalChannel --> Attribute
}

' =====================================================================
' Fixtures — one patched light + its runtime views
' =====================================================================
package Fixtures {
    class Parameter {
        note: runtime view over one LogicalChannel\n(one DMX channel, resolves value->bytes)
    }
    class ColorCell {
        note: view over the color params of\none emitter/pixel (HSV + virtual dimmer)
    }
    class Fixture {
        - m_name : string
        - m_fid : uint16
        - m_universe : uint16
        - m_buffer : uint8*  (non-owning)
        - m_parameters : vector<Parameter>
        - m_byAttribute : map<Attribute, vector<Parameter*>>
        - m_colorCells : vector<ColorCell>
        --
        + Add(def, cellIndex) : Parameter&
        + Build()
        + Bind(buffer, start)
        + Has(Attribute) : bool
        + Resolve(FixtureValues)   << stateless sink
        + Fid() / SetFid()
    }
    Fixture *-- "many" Parameter
    Fixture *-- "many" ColorCell
    Parameter ..> LogicalChannel : views
}
note bottom of Fixture
  IS-A Utils::Fragment: a Universe packs it,
  assigns start + wires the DMX buffer down
  to every Parameter.
end note

' =====================================================================
' DMX — physical universes + transient selections
' =====================================================================
package DMX {
    class Universe {
        - m_id : uint16
        - m_byName : map<string, vector<Fixture>>
        --
        + addFixture(...) : Fixture
        + addFixtures(...) : vector<Fixture>
        + fixtures() : list<Fixture>
        + byName(name)
        + <<512-byte DMX buffer>>
    }
    note top of Universe : IS-A FragmentedStorage<Fixture,512>\nowns the byte buffer + packing

    class FixtureGroup {
        - m_name : string
        - m_fixtures : vector<Fixture>   (shared, NON-owning)
        - m_usedUniverses : set<uint16>
        - m_byAttribute : map<Attribute, vector<Parameter*>>  (cache)
        - m_colorCells : vector<ColorCell*>  (cache)
        --
        + add(Fixture) / add(vector) / add(FixtureGroup)
        + fixtures() : vector<Fixture>
        + fids() : vector<uint16>
        + parameters(Attribute) / colorCells()   << lazy cache
        + operator+=
        + describe()
    }
    Universe o-- "owns" Fixture
    FixtureGroup o-- "refs" Fixture
}

' =====================================================================
' Engine — composition & render core
' =====================================================================
package Engine {

    struct TimeContext {
        + now : double
        + dt : float
        + frame : uint64
    }

    enum MergePolicy {
        HTP
        LTP
    }
    struct FixtureValues {
        + color : optional<HSV>    ' hue/sat + intensity (V) — NOT YET SPLIT
        + generic : map<Attribute, float>
    }
    class Frame {
        - m_values : map<uint16 fid, FixtureValues>
        + clear()
        + contribute(fid, FixtureValues, MergePolicy)
        + get(fid) / all()
    }
    Frame o-- FixtureValues
    FixtureValues ..> MergePolicy

    class Patch {
        - m_universes : map<uint16, Universe>
        - m_fixtures : map<uint16 fid, Fixture>
        - m_byName : map<string, vector<Fixture>>
        - m_usedFids : set<uint16>
        - m_dirty : set<uint16>   << universes needing output
        --
        + patch(fixture, universe, amount, start?, startFID?) : vector<uint16>
        + getFixture(fid) / getFixtures(fids)
        + getUniverse(u)
        + blackout()
        + dirtyUniverses() / markDirty() / clearDirty()
    }
    Patch o-- Universe
    Patch o-- "index by fid" Fixture

    abstract class Layer {
        + {abstract} priority() : int
        + enabled() : bool
        + {abstract} apply(Frame&, TimeContext&)
    }
    class ProgrammerLayer {
        - m_patch : Patch&        << resolves FIDs
        - m_selection : FixtureGroup   << transient, ordered
        - m_edits : map<uint16, FixtureValues>
        --
        + select(FixtureGroup|fids)   << replace
        + add(FixtureGroup|fids)      << accumulate
        + deselect()
        + setColor / setHueSat / setIntensity / setIntensityRamp
        + fanColor(hueA, hueB, sat)
        + applyHueSat(fid, h, s)      << used by preset recall
        + selection() / edits() / selectedGroup()
        + clearValues() / clearAll()
        + priority() = 1000
        + apply(Frame&, TimeContext&)  << edits contributed LTP
    }
    Layer <|-- ProgrammerLayer
    ProgrammerLayer *-- FixtureGroup
    ProgrammerLayer o-- FixtureValues
    ProgrammerLayer ..> Patch : resolves via
    Layer ..> Frame : writes

    class DMXOutput {
        - m_ip : IP
        - m_sourceName : string
        - m_senders : map<uint16, SacnSender>
        + setIP() / setSourceName()
        + send(Universe)
        + sendDirty(patch)
    }
    DMXOutput ..> Universe : reads buffer
    DMXOutput ..> Patch : dirty set

    class Engine {
        - m_patch : Patch
        - m_time : TimeContext
        - m_output : DMXOutput
        - m_frame : Frame
        - m_programmer : ProgrammerLayer
        - m_layers : vector<Layer*>   << composed low->high
        - m_stored : Stored
        --
        + patch(...)
        + selectGroup / storeGroup
        + storeColorPreset(num) / recallColorPreset(num)
        + programmer() / stored() / patcher()
        + update(dt)   << compose -> resolve -> output
        + setIP() / setSourceName()
    }
    Engine *-- Patch
    Engine *-- Frame
    Engine *-- DMXOutput
    Engine *-- TimeContext
    Engine *-- ProgrammerLayer
    Engine o-- "composes" Layer

    ' =================================================================
    ' Engine::Pools — the show's numbered object storage
    ' =================================================================
    package Pools {
        abstract class PoolObject {
            - m_number : uint32
            - m_name : string
            # setNumber(n)   << friend Pool
            + number() / name()
            + {abstract} describe() : string
        }

        class "Pool<T : PoolObject>" as Pool {
            - m_items : map<uint32, shared_ptr<T>>
            - m_byName : map<string, uint32>   << name cache
            --
            + store(num?, obj) / emplace / emplaceAt
            + get(num) / get(name) / contains
            + rename(num, name)   << only sync'd mutator
            + remove / move / clear
            + nextFree()
            + describe()
        }
        Pool o-- PoolObject : holds

        class Group {
            - m_fg : FixtureGroup
            + fixtureGroup() : FixtureGroup&
            + add(fixtures)
            + fids()
            + describe()
        }
        PoolObject <|-- Group
        Group *-- FixtureGroup

        struct HueSat {
            + h : float
            + s : float
        }
        class "Preset<T>" as Preset {
            - m_values : map<uint16 fid, T>   << keys = applies-to list
            + set(fid, v) / clear()
            + appliesTo(fid) / values() / size()
            + describe()
        }
        PoolObject <|-- Preset
        class ColorPreset <<Preset<HueSat>>>
        Preset <|.. ColorPreset
        ColorPreset ..> HueSat

        class Stored {
            - m_groups : Pool<Group>
            - m_colorPresets : Pool<ColorPreset>
            .. TODO: sequences / effects ..
            --
            + groups() / colorPresets()
            + clear() / describe()
        }
        Stored *-- Pool
    }
    Engine *-- Stored
}

' =====================================================================
' Cross-cutting data flow
' =====================================================================
note as N1
  **update(dt) render pipeline (non-tracking):**
  1. advance TimeContext
  2. Frame.clear()
  3. each Layer.apply() low->high  (ProgrammerLayer LTP @1000)
  4. Fixture.Resolve(Frame.get(fid)) -> writes DMX bytes
  5. DMXOutput.sendDirty(Patch)  (sACN)
end note
N1 .. Engine

note as N2
  **store / recall flow:**
  prog.select(fids)/add + setColor/fanColor
  -> Engine.storeGroup(n)         => Pool<Group>
  -> Engine.storeColorPreset(n)   => Pool<ColorPreset> (captures h,s per selected fid)
  -> Engine.recallColorPreset(n)  => applyHueSat onto current selection
end note
N2 .. Pools

@enduml
